--- a/style.css
+++ b/style.css
@@ -47,3 +47,12 @@ nav{
     
     
 }
+@media screen and (min-width: 576px){
+.content-logo{
+padding: 15px 0;
+
+}
+.content-list{
+max-width: 350px;
+gap: 30px;
+}Ioi
