--- a/style.css
+++ b/style.css
@@ -50,9 +50,9 @@ nav{
 @media screen and (min-width: 576px){
 .content-logo{
 padding: 15px 0;
-
 }
 .content-list{
 max-width: 350px;
 gap: 30px;
-}Ioi
+    }
+}
